fix for toolbar and cropped bacground on iOS devices

--- a/app/NovaWeb/src/styles/screen.scss
+++ b/app/NovaWeb/src/styles/screen.scss
@@ -15,8 +15,8 @@ body {
   background-color: $body-bg-color;
   background-image: url('images/bp_logo_gray.svg'), radial-gradient(ellipse 70% 50% at top, rgba(253, 253, 253, 0) 15%, #c4c4c4 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
   background-repeat: no-repeat, no-repeat;
-  background-position: center 44%, top;
-  background-size: 84%, 100% 100vh;
+  background-position: center 48%, top;
+  background-size: 84%, 120%;
   color: $body-color;
   overflow: hidden;
 }
@@ -42,7 +42,8 @@ body {
   height: calc(100% - #{$wrapper-height});
   margin-top: $wrapper-height;
   overflow: hidden;
-  position: relative;
+  position: fixed;
+  width: 100%;
 }
 
 @import 'partials/perfect-scrollbar';
